...
                model.erasing = true
              } label: {
                Label("Delete all my data", systemImage: "trash")
              }
            }
          } label: {
            Label("More", systemImage: "ellipsis.circle")
          }
        }
      }
    }
    .fullScreenCover(isPresented: $scanning) {
      DocumentScanner(
...
